--- a/HTML/Contact_me.HTML
+++ b/HTML/Contact_me.HTML
@@ -23,7 +23,7 @@
 <main class = "imagenes">
     <section class="cabecero__menu__oscuro">
         <figure class="main__darkmode">
-            <img src = "../Assets/modo-oscuro.png" class ="main__darkmode__fig">
+        <img id="darkModeToggle" src = "../Assets/modo-oscuro.png" class ="main__darkmode__fig">
         </figure>
     </section>
 
