--- a/HTML/Profolio.HTML
+++ b/HTML/Profolio.HTML
@@ -23,7 +23,7 @@
     <main class="main">
         <section class="cabecero__menu__oscuro">
             <figure class="main__darkmode">
-            <img src = "../Assets/modo-oscuro.png" class ="main__darkmode__fig">
+            <img id="darkModeToggle" src = "../Assets/modo-oscuro.png" class ="main__darkmode__fig">
             </figure>
         </section>
         <section class="main__profolio">
@@ -35,12 +35,13 @@
             </figure>
             <article class="proyectos">
                 <ol class="proyectos__lista">
-                    <li>Color fliper 14/02/2025 <img class="proyecto__1"src="../Assets/Proyecto 1 - color fliper.png" alt=""></li>
-                    <li>Ocultar/Mostrar Caja 18/02/2025 <img class="proyecto__2" src="../Assets/Proyecto 2 - Mostrar y ocultar.png" alt=""></li>
-                    <li>Frases aleatorias 18/02/2025 <img class="proyecto__3" src="../Assets/Proyecto 3 - Frases aleatorias.png" alt=""></li>
-                    <li>Lista de tareas 18/02/2025 <img class="proyecto__4" src="../Assets/Proyecto 4 - Lista de tareas.png" alt=""></li>
+                    <li data-url="../Project/Color fliper/index.html">Color fliper 14/02/2025 <img class="proyecto__1" src="../Assets/Proyecto 1 - color fliper.png" alt=""></li>
+                    <li data-url="../Project/Proyecto 2/HTML/index.html">Ocultar/Mostrar Caja 18/02/2025 <img class="proyecto__2" src="../Assets/Proyecto 2 - Mostrar y ocultar.png" alt=""></li>
+                    <li data-url="../Project/Proyecto 3 extra/index.html">Frases aleatorias 18/02/2025 <img class="proyecto__3" src="../Assets/Proyecto 3 - Frases aleatorias.png" alt=""></li>
+                    <li data-url="../Project/Proyecto 4 extra/index.html">Lista de tareas 18/02/2025 <img class="proyecto__4" src="../Assets/Proyecto 4 - Lista de tareas.png" alt=""></li>
                 </ol>
             </article>
+
         </section>
     </body>
 </html>
