--- a/index.HTML
+++ b/index.HTML
@@ -11,7 +11,7 @@
    
     <header class="Cabecero">
         <nav class="cabecero__menu">
-            <img class="cabecero__menu__logo" src = "../Assets/logo Pablo Torres Serván.png" class="cabecero__menu__perfil">
+            <img class="cabecero__menu__logo" src = "./Assets/logo Pablo Torres Serván.png" class="cabecero__menu__perfil">
             <ul class="cabecero__menu__lista">
                 <li class="cabecero__menu__enlace"><a href="">Home</a></li>
                 <li class="cabecero__menu__enlace"><a href="./HTML/About_me.HTML">Sobre mi</a></li>
@@ -24,14 +24,14 @@
     <main class="main">
     <section class="cabecero__menu__oscuro">
         <figure class="main__darkmode">
-        <img src = "./Assets/modo-oscuro.png" class ="main__darkmode__fig">
+        <img id="darkModeToggle" src = "./Assets/modo-oscuro.png" class ="main__darkmode__fig">
         </figure>
     </section>
         
         <section class="main__imagen">
             <article class="main__imagen__art">
                 <h1 class ="main__imagen__texto">Pablo Torres Serván</h1>
-                <p class="main__imagen__art__texto">Texto descriptivo</p>
+                <p class="main__imagen__art__texto">Soy una persona tranquila y con una actitud enfocada en el trabajo bien hecho. Me caracterizo por ser muy disciplinado, constante y comprometido con mis tareas, lo que me permite mantener un alto nivel de organización y eficiencia. Además de valorar el trabajo en equipo y me esfurzo de ser buen compañero. Estas cualidades me ayudan a integrarme en los entornos laborales y a contribuir de manera positiva con mis objetivos</p>
             </article>
             <figure class="main__imagen__fig">
                 <img src="./Assets/Foto perfil.png" class ="main__imagen">
