--- a/HTML/About_me.HTML
+++ b/HTML/About_me.HTML
@@ -23,7 +23,7 @@
 
         <section class="cabecero__menu__oscuro">
             <figure class="main__darkmode">
-            <img src = "../Assets/modo-oscuro.png" class ="main__darkmode__fig">
+            <img id="darkModeToggle" src = "../Assets/modo-oscuro.png" class ="main__darkmode__fig">
             </figure>
         </section>
 
